#2 Fixed header added z-index

--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,7 @@
     }
     .menu-wrapper:hover .menu {
         display: block;
+        z-index:2;
     }
     /**************** ENDDD!!!!!MAIN HEADER************************/
 
